--- a/sections/columns.liquid
+++ b/sections/columns.liquid
@@ -96,7 +96,7 @@
             {%- if title != blank or text != blank or button_label != blank -%}
               <div class="columns__text">
                 {%- if title != blank -%}
-                  <h4 class="columns__title">{{- title -}}</h4>
+                  <strong class="columns__title h4">{{- title -}}</strong>
                 {%- endif -%}
 
                 {%- if text != blank -%}
@@ -183,7 +183,7 @@
               },
               {
                 "value": "tag",
-                "label": "Tagline"
+                "label": "Tag"
               }
             ],
             "default": "phone",
