--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -227,7 +227,7 @@
       {
         "type": "text",
         "id": "custom_title",
-        "label": "Custom title",
+        "label": "Site title",
         "info": "Displayed when no logo is added"
       },
       {
