--- a/sections/locations.liquid
+++ b/sections/locations.liquid
@@ -219,6 +219,7 @@
     "tag": "section",
     "class": "locations",
     "description": "Show the addresses of your locations with a map",
+    "max_blocks": 16,
     "blocks":[
       {
         "type": "tab",
