--- a/sections/text-with-image.liquid
+++ b/sections/text-with-image.liquid
@@ -143,7 +143,7 @@
     <div class="text-image__columns">
       <div class="text-image__col">
         {%- if tag != blank -%}
-          <span class="text-image__tag tagline">{{- tag -}}</span>
+          <strong class="text-image__tag tagline">{{- tag -}}</strong>
         {%- endif -%}
 
         {%- if title != blank -%}
