--- a/sections/title.liquid
+++ b/sections/title.liquid
@@ -67,7 +67,7 @@
       <div class="title__top">
         <div class="title__col">
           {%- if tag != blank -%}
-            <span class="title__tag tagline">{{- tag -}}</span>
+            <strong class="title__tag tagline">{{- tag -}}</strong>
           {%- endif -%}
 
           {%- if title != blank -%}
