--- a/sections/top-bar.liquid
+++ b/sections/top-bar.liquid
@@ -62,7 +62,7 @@
         {%- render 'icon', icon: icon -%}
 
         {%- if bar_text != blank -%}
-          <span class="top-bar__text top-bar__message">
+          <span class="top-bar__text top-bar__message bq-content rx-content">
             {{- bar_text -}}
           </span>
         {%- endif -%}
