--- a/snippets/breadcrumbs.liquid
+++ b/snippets/breadcrumbs.liquid
@@ -23,7 +23,7 @@
     .breadcrumbs {
       padding: 30px 0 26px;
       font-size: 14px;
-      line-height: var(--line-height-xs, 1);
+      line-height: var(--line-height-xs);
     }
 
     .breadcrumbs__separator {
@@ -33,41 +33,41 @@
     }
 
     .breadcrumbs__name {
-      font-weight: var(--font-weight-semibold, 600);
+      font-weight: var(--font-weight-semibold);
       display: inline-block;
       vertical-align: top;
     }
 
     .palette-one .breadcrumbs {
-      color: var(--color-third, #1A333366);
+      color: var(--color-third-1);
     }
 
     .palette-one .breadcrumbs path {
-      fill: var(--color-primary, #1A3333);
+      fill: var(--color-primary-1);
     }
 
     .palette-one .breadcrumbs a:hover {
-      color: var(--color-primary, #1A3333);
+      color: var(--color-primary-1);
     }
 
     .palette-one .breadcrumbs__name {
-      color: var(--color-outline, #53C787);
+      color: var(--color-outline-1);
     }
 
     .palette-two .breadcrumbs {
-      color: var(--color-third-2, #FFFFFF66);
+      color: var(--color-third-2);
     }
 
     .palette-two .breadcrumbs path {
-      fill: var(--color-primary-2, #FFFFFF);
+      fill: var(--color-primary-2);
     }
 
     .palette-two .breadcrumbs a:hover {
-      color: var(--color-primary-2, #FFFFFF);
+      color: var(--color-primary-2);
     }
 
     .palette-two .breadcrumbs__name {
-      color: var(--color-outline-2, #53C787);
+      color: var(--color-outline-2);
     }
   {% endstyle %}
 
