--- a/snippets/icon.liquid
+++ b/snippets/icon.liquid
@@ -17,10 +17,10 @@
 
 {% style %}
   .palette-one .fa, .palette-one .far {
-    color: var(--color-primary, #1A3333);
+    color: var(--color-primary-1);
   }
   .palette-two .fa, .palette-two .far {
-    color: var(--color-primary-2, #FFFFFF);
+    color: var(--color-primary-2);
   }
 {% endstyle %}
 
