--- a/snippets/payments.liquid
+++ b/snippets/payments.liquid
@@ -11,11 +11,11 @@
 {% style %}
   .payment {
     padding: 0 16px 0 0;
-    margin: 0 calc(-1 * (var(--social-spacing, 6px) - 6px));
+    margin: 0 calc(-1 * (var(--social-spacing) - 6px));
   }
 
   .payment i {
-    margin: 0 calc(var(--social-spacing, 6px) - 6px);
+    margin: 0 calc(var(--social-spacing) - 6px);
   }
 {% endstyle %}
 
