--- a/snippets/socials.liquid
+++ b/snippets/socials.liquid
@@ -11,11 +11,11 @@
 {% style %}
   .social-networks {
     display: flex;
-    margin: 0 calc(-1 * var(--social-spacing, 6px));
+    margin: 0 calc(-1 * var(--social-spacing));
   }
 
   .social-networks__item {
-    margin: 0 var(--social-spacing, 6px);
+    margin: 0 var(--social-spacing);
   }
 {% endstyle %}
 
