--- a/sections/hero-search.liquid
+++ b/sections/hero-search.liquid
@@ -16,9 +16,17 @@
   {%- assign show_datepicker = true -%}
 
   {%- if color_palette == "one" -%}
-    {%- assign background_accent = settings.accent_background -%}
+    {%- if settings.accent_background != blank -%}
+      {%- assign background_accent = settings.accent_background -%}
+    {%- else -%}
+      {%- assign background_accent = branding_color -%}
+    {%- endif -%}
   {%- elsif color_palette == "two" -%}
-    {%- assign background_accent = settings.accent_background_2 -%}
+    {%- if settings.accent_background_2 != blank -%}
+      {%- assign background_accent = settings.accent_background_2 -%}
+    {%- else -%}
+      {%- assign background_accent = branding_color -%}
+    {%- endif -%}
   {%- endif -%}
 {%- endif -%}
 
