--- a/assets/accordion.css
+++ b/assets/accordion.css
@@ -4,15 +4,15 @@
 }
 
 .accordion__wrapper--padding-top {
-  padding-top: var(--padding-top-mobile, 40px);
+  padding-top: var(--padding-top-mobile);
 }
 
 .accordion__wrapper--padding-bottom {
-  padding-bottom: var(--padding-bottom-mobile, 40px);
+  padding-bottom: var(--padding-bottom-mobile);
 }
 
 .accordion__container {
-  max-width: calc(var(--max-width-narrow) + var(--horizontal-padding, 16px) * 2);
+  max-width: calc(var(--max-width-narrow) + var(--horizontal-padding) * 2);
   position: relative;
   z-index: 1;
 }
@@ -85,50 +85,50 @@
 }
 
 .accordion .palette-one .accordion__heading {
-  color: var(--color-primary, #1A3333);
+  color: var(--color-primary-1);
 }
 .accordion .palette-two .accordion__heading {
-  color: var(--color-primary-2, #FFFFFF);
+  color: var(--color-primary-2);
 }
 
 .palette-one.accordion__wrapper {
-  background: var(--background-primary, #FFFFFF);
-  color: var(--color-third, #1A333366);
+  background: var(--background-primary-1);
+  color: var(--color-third-1);
 }
 
 .palette-one .accordion-block__item {
-  background: var(--background-primary, #FFFFFF);
+  background: var(--background-primary-1);
 }
 
 .palette-one .accordion__background-wrapper g,
 .palette-one .accordion__background-wrapper path,
 .palette-one .accordion__background-floral-wrapper g,
 .palette-one .accordion__background-floral-wrapper path {
-  fill: var(--color-primary, #1A3333);
+  fill: var(--color-primary-1);
 }
 
 .palette-one .accordion__background-wrapper:after {
-  background: linear-gradient(180.44deg, var(--background-primary, #FFFFFF) 51.3%, var(--background-primary-00, #FFFFFF00) 81.06%);
+  background: linear-gradient(180.44deg, var(--background-primary-1) 51.3%, var(--background-primary-1-00) 81.06%);
 }
 
 .palette-two.accordion__wrapper {
-  background: var(--background-primary-2, #1A3333);
-  color: var(--color-third-2, #FFFFFF66);
+  background: var(--background-primary-2);
+  color: var(--color-third-2);
 }
 
 .palette-two .accordion-block__item {
-  background: var(--background-primary-2, #1A3333);
+  background: var(--background-primary-2);
 }
 
 .palette-two .accordion__background-wrapper g,
 .palette-two .accordion__background-wrapper path,
 .palette-two .accordion__background-floral-wrapper g,
 .palette-two .accordion__background-floral-wrapper path {
-  fill: var(--color-primary-2, #FFFFFF);
+  fill: var(--color-primary-2);
 }
 
 .palette-two .accordion__background-wrapper:after {
-  background: linear-gradient(180.44deg, var(--background-primary-2, #1A3333) 51.3%, var(--background-primary-2-00, #1A333300) 81.06%);
+  background: linear-gradient(180.44deg, var(--background-primary-2) 51.3%, var(--background-primary-2-00) 81.06%);
 }
 
 @media (min-width: 667px) {
@@ -143,10 +143,10 @@
 
 @media (min-width: 992px) {
   .accordion__wrapper--padding-top {
-    padding-top: var(--padding-top, 40px);
+    padding-top: var(--padding-top);
   }
 
   .accordion__wrapper--padding-bottom {
-    padding-bottom: var(--padding-bottom, 40px);
+    padding-bottom: var(--padding-bottom);
   }
 }
