--- a/assets/carousel.css
+++ b/assets/carousel.css
@@ -46,7 +46,7 @@
 .carousel__item {
   position: relative;
   min-width: var(--slide-width-mobile);
-  transition: all calc(var(--animation-duration, 200ms) + 200ms) var(--transition-function-ease);
+  transition: all calc(var(--animation-duration) + 0.2s) var(--transition-function-ease);
   padding: 0;
   scroll-snap-align: start;
   scroll-snap-stop: always;
@@ -91,7 +91,7 @@
   content: "";
   width: 8px;
   height: 8px;
-  transition: all var(--animation-duration, 200ms) var(--transition-function-ease-out);
+  transition: all var(--animation-duration) var(--transition-function-ease-out);
   border-radius: 50%;
   pointer-events: none;
 }
@@ -124,7 +124,7 @@
   justify-content: center;
   cursor: pointer;
   text-indent: -9999px;
-  transition: border var(--animation-duration, 200ms) var(--transition-function-ease-out);
+  transition: border var(--animation-duration) var(--transition-function-ease-out);
 }
 
 .carousel__btn svg {
@@ -138,7 +138,7 @@
 }
 
 .carousel__btn path {
-  transition: all var(--animation-duration, 200ms) var(--transition-function-ease-out);
+  transition: all var(--animation-duration) var(--transition-function-ease-out);
 }
 
 .carousel .product-card {
@@ -172,8 +172,8 @@
   position: static;
   opacity: 1;
   visibility: visible;
-  transition: visibility calc(var(--animation-duration, 400ms) + 200ms) var(--transition-function-ease-out),
-        opacity calc(var(--animation-duration, 400ms) + 200ms) var(--transition-function-ease-out);
+  transition: visibility calc(var(--animation-duration) + 0.2s) var(--transition-function-ease-out),
+        opacity calc(var(--animation-duration) + 0.2s) var(--transition-function-ease-out);
 }
 
 .carousel__edges .carousel__item.hide {
@@ -181,12 +181,12 @@
   z-index: -1;
   visibility: hidden;
   opacity: 0;
-  transition: visibility calc(var(--animation-duration, 400ms) + 200ms) var(--transition-function-ease-in),
-        opacity calc(var(--animation-duration, 400ms) + 200ms) var(--transition-function-ease-in);
+  transition: visibility calc(var(--animation-duration) + 0.2s) var(--transition-function-ease-in),
+        opacity calc(var(--animation-duration) + 0.2s) var(--transition-function-ease-in);
 }
 
 .carousel__edges .images__text-area {
-  margin-bottom: var(--margin-bottom-mobile, 0px);
+  margin-bottom: var(--margin-bottom-mobile);
 }
 
 .carousel__edges .carousel__navigation {
@@ -209,10 +209,10 @@
   cursor: pointer;
   width: 40px;
   height: 40px;
-  border-radius: var(--border-radius, 0);
+  border-radius: var(--border-radius);
   margin: 0;
   z-index: 2;
-  line-height: var(--line-height-xs, 1);
+  line-height: var(--line-height-xs);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -281,141 +281,141 @@
 }
 
 .carousel-with-date-picker.carousel__edges .carousel__navigation {
-  bottom: calc(18px + var(--date-picker-block-height, 0px));
+  bottom: calc(18px + var(--date-picker-block-height));
 }
 
 .carousel-with-date-picker.carousel__edges .carousel__pagination {
-  bottom: calc(31px + var(--date-picker-block-height, 0px));
+  bottom: calc(31px + var(--date-picker-block-height));
 }
 
 .carousel-with-date-picker.carousel__edges .carousel__counter {
-  bottom: calc(28px + var(--date-picker-block-height, 0px));
+  bottom: calc(28px + var(--date-picker-block-height));
 }
 
 .palette-one .carousel__dot:after {
-  background: var(--color-primary-30, #1A33334D);
+  background: var(--color-primary-1-30);
 }
 
 .palette-one .carousel__dot.active:after {
-  background: var(--color-primary, #1A3333);
+  background: var(--color-primary-1);
 }
 
 .palette-one .carousel__btn {
-  border-color: var(--color-border, #1A333326);
+  border-color: var(--color-border-1);
 }
 
 .palette-one .carousel__btn path {
-  fill: var(--color-primary, #1A3333);
+  fill: var(--color-primary-1);
 }
 
 .palette-two .carousel__dot:after {
-  background: var(--color-primary-2-30, #FFFFFF4D);
+  background: var(--color-primary-2-30);
 }
 
 .palette-two .carousel__dot.active:after {
-  background: var(--color-primary-2, #FFFFFF);
+  background: var(--color-primary-2);
 }
 
 .palette-two .carousel__btn {
-  border-color: var(--color-border-2, #FFFFFF47);
+  border-color: var(--color-border-2);
 }
 
 .palette-two .carousel__btn path {
-  fill: var(--color-primary-2, #FFFFFF);
+  fill: var(--color-primary-2);
 }
 
 .palette-one .carousel__edges .show-overlay-light ~ .carousel__navigation .carousel__btn,
 .palette-one .carousel__edges .carousel__btn {
-  background: var(--background-overlay-08, #1A333314);
+  background: var(--background-overlay-08);
   border-color: transparent;
 }
 
 .palette-one .carousel__edges .show-overlay-dark ~ .carousel__navigation .carousel__btn {
-  background: var(--color-overlay-08, #FFFFFF14);
+  background: var(--color-overlay-08);
   border-color: transparent;
 }
 
 .palette-one .carousel__edges .show-overlay-light ~ .carousel__navigation .carousel__btn path,
 .palette-one .carousel__edges .carousel__btn path {
-  fill: var(--background-overlay, #1A3333);
+  fill: var(--background-overlay);
 }
 
 .palette-one .carousel__edges .show-overlay-dark ~ .carousel__navigation .carousel__btn path {
-  fill: var(--color-overlay, #FFFFFF);
+  fill: var(--color-overlay);
 }
 
 .palette-one .carousel__edges .show-overlay-light ~ .carousel__pagination .carousel__dot:after,
 .palette-one .carousel__edges .carousel__dot:after {
-  background: var(--background-overlay-45, #1A333373);
+  background: var(--background-overlay-45);
 }
 
 .palette-one .carousel__edges .show-overlay-dark ~ .carousel__pagination .carousel__dot:after {
-  background: var(--color-overlay-45, #FFFFFF73);
+  background: var(--color-overlay-45);
 }
 
 .palette-one .carousel__edges .show-overlay-light ~ .carousel__pagination .carousel__dot.active:after,
 .palette-one .carousel__edges .carousel__dot.active:after {
-  background: var(--background-overlay, #1A3333);
+  background: var(--background-overlay);
 }
 
 .palette-one .carousel__edges .show-overlay-dark ~ .carousel__pagination .carousel__dot.active:after {
-  background: var(--color-overlay, #FFFFFF);
+  background: var(--color-overlay);
 }
 
 .palette-one .carousel__edges .show-overlay-light ~ .carousel__counter,
 .palette-one .carousel__edges .carousel__counter {
-  color: var(--background-overlay, #1A3333);
+  color: var(--background-overlay);
 }
 
 .palette-one .carousel__edges .show-overlay-dark ~ .carousel__counter {
-  color: var(--color-overlay, #FFFFFF);
+  color: var(--color-overlay);
 }
 
 .palette-two .carousel__edges .show-overlay-light ~ .carousel__navigation .carousel__btn,
 .palette-two .carousel__edges .carousel__btn {
-  background: var(--background-overlay-2-08, #1A333314);
+  background: var(--background-overlay-2-08);
   border-color: transparent;
 }
 
 .palette-two .carousel__edges .show-overlay-dark ~ .carousel__navigation .carousel__btn {
-  background: var(--color-overlay-2-08, #FFFFFF14);
+  background: var(--color-overlay-2-08);
   border-color: transparent;
 }
 
 .palette-two .carousel__edges .show-overlay-light ~ .carousel__navigation .carousel__btn path,
 .palette-two .carousel__edges .carousel__btn path {
-  fill: var(--background-overlay-2, #1A3333);
+  fill: var(--background-overlay-2);
 }
 
 .palette-two .carousel__edges .show-overlay-dark ~ .carousel__navigation .carousel__btn path {
-  fill: var(--color-overlay-2, #FFFFFF);
+  fill: var(--color-overlay-2);
 }
 
 .palette-two .carousel__edges .show-overlay-light ~ .carousel__pagination .carousel__dot:after,
 .palette-two .carousel__edges .carousel__dot:after {
-  background: var(--background-overlay-2-45, #1A333373);
+  background: var(--background-overlay-2-45);
 }
 
 .palette-two .carousel__edges .show-overlay-dark ~ .carousel__pagination .carousel__dot:after {
-  background: var(--color-overlay-2-45, #FFFFFF73);
+  background: var(--color-overlay-2-45);
 }
 
 .palette-two .carousel__edges .show-overlay-light ~ .carousel__pagination .carousel__dot.active:after,
 .palette-two .carousel__edges .carousel__dot.active:after {
-  background: var(--background-overlay-2, #1A3333);
+  background: var(--background-overlay-2);
 }
 
 .palette-two .carousel__edges .show-overlay-dark ~ .carousel__pagination .carousel__dot.active:after {
-  background: var(--color-overlay-2, #FFFFFF);
+  background: var(--color-overlay-2);
 }
 
 .palette-two .carousel__edges .show-overlay-light ~ .carousel__counter,
 .palette-two .carousel__edges .carousel__counter {
-  color: var(--background-overlay-2, #1A3333);
+  color: var(--background-overlay-2);
 }
 
 .palette-two .carousel__edges .show-overlay-dark ~ .carousel__counter {
-  color: var(--color-overlay-2, #FFFFFF);
+  color: var(--color-overlay-2);
 }
 
 @media (min-width: 992px) {
@@ -451,7 +451,7 @@
   }
 
   .carousel__edges .images__text-area {
-    margin-bottom: var(--margin-bottom, 0px);
+    margin-bottom: var(--margin-bottom);
   }
 
   .carousel__edges .carousel__navigation {
@@ -467,7 +467,7 @@
   }
 
   .carousel__edges .carousel__dot:after {
-    border-radius: var(--border-radius, 0);
+    border-radius: var(--border-radius);
     width: 100%;
     height: 2px;
   }
@@ -504,11 +504,11 @@
   }
 
   .carousel-with-date-picker.carousel__edges .carousel__navigation {
-    bottom: calc(33px + var(--date-picker-block-height, 0px));
+    bottom: calc(33px + var(--date-picker-block-height));
   }
 
   .carousel-with-date-picker.carousel__edges .carousel__counter {
-    bottom: calc(33px + var(--date-picker-block-height, 0px));
+    bottom: calc(33px + var(--date-picker-block-height));
   }
 }
 
@@ -547,54 +547,54 @@
   }
 
   .palette-one .carousel__btn:hover {
-    border-color: var(--color-primary, #1A3333);
+    border-color: var(--color-primary-1);
   }
 
   .palette-one .carousel__dot:hover:after {
-    background: var(--color-primary, #1A3333);
+    background: var(--color-primary-1);
   }
 
   .palette-two .carousel__btn:hover {
-    border-color: var(--color-primary-2, #FFFFFF);
+    border-color: var(--color-primary-2);
   }
 
   .palette-two .carousel__dot:hover:after {
-    background: var(--color-primary-2, #FFFFFF);
+    background: var(--color-primary-2);
   }
 
   .palette-one .carousel__edges .show-overlay-light ~ .carousel__navigation .carousel__btn:hover,
   .palette-one .carousel__edges .carousel__btn:hover {
-    border-color: var(--background-overlay, #1A3333);
+    border-color: var(--background-overlay);
   }
 
   .palette-one .carousel__edges .show-overlay-dark ~ .carousel__navigation .carousel__btn:hover {
-    border-color: var(--color-overlay, #FFFFFF);
+    border-color: var(--color-overlay);
   }
 
   .palette-one .carousel__edges .show-overlay-light ~ .carousel__pagination .carousel__dot:hover:after,
   .palette-one .carousel__edges .carousel__dot:hover:after {
-    background: var(--background-overlay, #1A3333);
+    background: var(--background-overlay);
   }
 
   .palette-one .carousel__edges .show-overlay-dark ~ .carousel__pagination .carousel__dot:hover:after {
-    background: var(--color-overlay, #FFFFFF);
+    background: var(--color-overlay);
   }
 
   .palette-two .carousel__edges .show-overlay-light ~ .carousel__navigation .carousel__btn:hover,
   .palette-two .carousel__edges .carousel__btn:hover {
-    border-color: var(--background-overlay-2, #1A3333);
+    border-color: var(--background-overlay-2);
   }
 
   .palette-two .carousel__edges .show-overlay-dark ~ .carousel__navigation .carousel__btn:hover {
-    border-color: var(--color-overlay-2, #FFFFFF);
+    border-color: var(--color-overlay-2);
   }
 
   .palette-two .carousel__edges .show-overlay-light ~ .carousel__pagination .carousel__dot:hover:after,
   .palette-two .carousel__edges .carousel__dot:hover:after {
-    background: var(--background-overlay-2, #1A3333);
+    background: var(--background-overlay-2);
   }
 
   .palette-two .carousel__edges .show-overlay-dark ~ .carousel__pagination .carousel__dot:hover:after {
-    background: var(--color-overlay-2, #FFFFFF);
+    background: var(--color-overlay-2);
   }
 }
