--- a/assets/collection-page.css
+++ b/assets/collection-page.css
@@ -3,11 +3,11 @@
 }
 
 .collection-page__wrapper--padding-top {
-  padding-top: var(--padding-top-mobile, 24px);
+  padding-top: var(--padding-top-mobile);
 }
 
 .collection-page__wrapper--padding-bottom {
-  padding-bottom: var(--padding-bottom-mobile, 24px);
+  padding-bottom: var(--padding-bottom-mobile);
 }
 
 .collection-page__products {
@@ -19,8 +19,8 @@
 
 .collection-page__grid {
   font-size: 16px;
-  font-weight: var(--font-weight-regular, 400);
-  line-height: var(--line-height-lg, 1.5);
+  font-weight: var(--font-weight-regular);
+  line-height: var(--line-height-lg);
 }
 
 .collection-page .product-card {
@@ -28,13 +28,13 @@
 }
 
 .palette-one.collection-page__wrapper {
-  background: var(--background-primary, #FFFFFF);
-  color: var(--color-primary, #1A3333);
+  background: var(--background-primary-1);
+  color: var(--color-primary-1);
 }
 
 .palette-two.collection-page__wrapper {
-  background: var(--background-primary-2, #1A3333);
-  color: var(--color-primary-2, #FFFFFF);
+  background: var(--background-primary-2);
+  color: var(--color-primary-2);
 }
 
 @media (min-width: 768px) {
@@ -46,11 +46,11 @@
 
 @media (min-width: 992px) {
   .collection-page__wrapper--padding-top {
-    padding-top: var(--padding-top, 24px);
+    padding-top: var(--padding-top);
   }
 
   .collection-page__wrapper--padding-bottom {
-    padding-bottom: var(--padding-bottom, 24px);
+    padding-bottom: var(--padding-bottom);
   }
 
   .collection-page__grid {
@@ -79,7 +79,7 @@
 @media (min-width: 1080px) {
   .collection-page__products {
     gap: 20px 32px;
-    grid-template-columns: repeat(var(--grid-element, 3), minmax(210px, 1fr));
+    grid-template-columns: repeat(var(--grid-element), minmax(210px, 1fr));
   }
 }
 
