--- a/assets/locations.css
+++ b/assets/locations.css
@@ -1,26 +1,26 @@
 
 .locations__wrapper--padding-top {
-  padding-top: var(--padding-top-mobile, 70px);
+  padding-top: var(--padding-top-mobile);
 }
 
 .locations__wrapper--padding-bottom {
-  padding-bottom: var(--padding-bottom-mobile, 70px);
+  padding-bottom: var(--padding-bottom-mobile);
 }
 
 .palette-one.locations__wrapper {
-  background: var(--background-primary, #FFFFFF);
+  background: var(--background-primary-1);
 }
 
 .palette-two.locations__wrapper {
-  background: var(--background-primary-2, #1A3333);
+  background: var(--background-primary-2);
 }
 
 @media (min-width: 992px) {
   .locations__wrapper--padding-top {
-    padding-top: var(--padding-top, 112px);
+    padding-top: var(--padding-top);
   }
 
   .locations__wrapper--padding-bottom {
-    padding-bottom: var(--padding-bottom, 112px);
+    padding-bottom: var(--padding-bottom);
   }
 }
