--- a/assets/map.css
+++ b/assets/map.css
@@ -31,7 +31,7 @@
   left: 0;
   right: 0;
   height: 1px;
-  background: var(--color-black-08, #1A333373);
+  background: var(--color-black-1-08);
 }
 
 .map .ol-control {
@@ -42,29 +42,29 @@
   display: block;
   margin: 0;
   padding: 0;
-  color: var(--color-black, #1A3333);
+  color: var(--color-black);
   font-size: inherit;
-  font-weight: var(--font-weight-semibold, 600);
+  font-weight: var(--font-weight-semibold);
   line-height: 1;
   text-align: center;
   text-decoration: none;
   height: 24px;
   width: 24px;
-  background-color: var(--color-white, #FFFFFF);
+  background-color: var(--color-white);
   border: 1px solid transparent;
-  transition: all var(--animation-duration, 200ms) var(--transition-function-ease-out);
+  transition: all var(--animation-duration) var(--transition-function-ease-out);
   pointer-events: all !important;
   cursor: pointer;
 }
 
 .map .ol-control button:hover {
-  background-color: var(--color-white-90, #FFFFFFE6);
+  background-color: var(--color-white-90);
 }
 
 .palette-one .map .ol-control button:hover {
-  border-color: var(--background-accent-hover, #1A3333CC);
+  border-color: var(--background-accent-1-hover);
 }
 
 .palette-two .map .ol-control button:hover {
-  border-color: var(--background-accent-2-hover, #FFFFFFCC);
+  border-color: var(--background-accent-2-hover);
 }
