--- a/assets/mosaic.css
+++ b/assets/mosaic.css
@@ -1,9 +1,9 @@
 .mosaic__wrapper--padding-top {
-  padding-top: var(--padding-top-mobile, 48px);
+  padding-top: var(--padding-top-mobile);
 }
 
 .mosaic__wrapper--padding-bottom {
-  padding-bottom: var(--padding-bottom-mobile, 48px);
+  padding-bottom: var(--padding-bottom-mobile);
 }
 
 .mosaic__list {
@@ -44,7 +44,7 @@
 }
 
 .mosaic__heading {
-  font-weight: var(--font-weight-bold, 700);
+  font-weight: var(--font-weight-bold);
   margin-bottom: 16px;
   max-width: 450px;
 }
@@ -106,26 +106,26 @@
 }
 
 .palette-one.mosaic__wrapper {
-  color: var(--color-secondary, #768585);
-  background: var(--background-primary, #FFFFFF);
+  color: var(--color-secondary-1);
+  background: var(--background-primary-1);
 }
 
 .palette-one .mosaic__item {
-  background: var(--background-primary, #FFFFFF);
-  border-color: var(--color-border, #1A333326);
+  background: var(--background-primary-1);
+  border-color: var(--color-border-1);
 }
 
 .palette-one .mosaic__item-col.no-image {
-  background: var(--color-image-placeholder, #1A333326);
+  background: var(--color-image-placeholder-1);
 }
 
 .palette-one .mosaic__heading,
 .palette-one .mosaic__button.button {
-  color: var(--color-primary, #1A3333);
+  color: var(--color-primary-1);
 }
 
 .palette-one .mosaic__button.button path {
-  fill: var(--color-primary, #1A3333);
+  fill: var(--color-primary-1);
 }
 
 .palette-one .mosaic__button.button:hover,
@@ -134,26 +134,26 @@
 }
 
 .palette-two.mosaic__wrapper {
-  color: var(--color-secondary-2, #CECECE);
-  background: var(--background-primary-2, #1A3333);
+  color: var(--color-secondary-2);
+  background: var(--background-primary-2);
 }
 
 .palette-two .mosaic__item {
-  background: var(--background-primary-2, #1A3333);
-  border-color: var(--color-border-2, #FFFFFF47);
+  background: var(--background-primary-2);
+  border-color: var(--color-border-2);
 }
 
 .palette-two .mosaic__item-col.no-image {
-  background: var(--color-image-placeholder-2, #FFFFFF47);
+  background: var(--color-image-placeholder-2);
 }
 
 .palette-two .mosaic__heading,
 .palette-two .mosaic__button.button {
-  color: var(--color-primary-2, #FFFFFF);
+  color: var(--color-primary-2);
 }
 
 .palette-two .mosaic__button.button path {
-  fill: var(--color-primary-2, #FFFFFF);
+  fill: var(--color-primary-2);
 }
 
 @media (min-width: 992px) {
@@ -241,11 +241,11 @@
 
 @media (min-width: 1100px) {
   .mosaic__wrapper--padding-top {
-    padding-top: var(--padding-top, 112px);
+    padding-top: var(--padding-top);
   }
 
   .mosaic__wrapper--padding-bottom {
-    padding-bottom: var(--padding-bottom, 112px);
+    padding-bottom: var(--padding-bottom);
   }
 
   .mosaic__tag {
