--- a/assets/pagination.css
+++ b/assets/pagination.css
@@ -24,7 +24,7 @@
   justify-content: center;
   padding: 10px 15px;
   font-size: 14px;
-  font-weight: var(--font-weight-semibold, 600);
+  font-weight: var(--font-weight-semibold);
   text-decoration: none;
   height: 100%;
 }
@@ -38,7 +38,7 @@
 .pagination .page:not(.current),
 .pagination .prev:not([data-enabled="false"]),
 .pagination .next:not([data-enabled="false"]) {
-  transition: all var(--animation-duration, 200ms) var(--transition-function-ease);
+  transition: all var(--animation-duration) var(--transition-function-ease);
 }
 
 .pagination span[data-enabled="false"],
@@ -53,65 +53,65 @@
 }
 
 .palette-one .pagination span {
-  border-color: var(--color-border, #1A333326);
+  border-color: var(--color-border-1);
 }
 
 .palette-one .pagination .deco,
 .palette-one .pagination .current,
 .palette-one .pagination span a {
-  color: var(--color-secondary, #768585);
+  color: var(--color-secondary-1);
 }
 
 .palette-one .pagination .deco,
 .palette-one .pagination .current {
-  background: var(--background-accent, #1A3333);
-  color: var(--color-accent, #FFFFFF);
+  background: var(--background-accent-1);
+  color: var(--color-accent-1);
 }
 
 .palette-one .pagination .page:not(.current):hover,
 .palette-one .pagination .prev:not([data-enabled="false"]):hover,
 .palette-one .pagination .next:not([data-enabled="false"]):hover {
-  background: var(--background-accent-hover, #1A3333CC);
-  color: var(--color-accent, #FFFFFF);
+  background: var(--background-accent-1-hover);
+  color: var(--color-accent-1);
 }
 
 .palette-one .pagination path {
-  fill: var(--color-secondary, #768585);
+  fill: var(--color-secondary-1);
 }
 
 .palette-one .pagination .prev[data-enabled="true"] a:hover path,
 .palette-one .pagination .next[data-enabled="true"] a:hover path {
-  fill: var(--color-accent, #FFFFFF);
+  fill: var(--color-accent-1);
 }
 
 .palette-two .pagination span {
-  border-color: var(--color-border-2, #FFFFFF47);
+  border-color: var(--color-border-2);
 }
 
 .palette-two .pagination .deco,
 .palette-two .pagination .current,
 .palette-two .pagination span a {
-  color: var(--color-secondary-2, #CECECE);
+  color: var(--color-secondary-2);
 }
 
 .palette-two .pagination .deco,
 .palette-two .pagination .current {
-  background: var(--background-accent-2, #FFFFFF);
-  color: var(--color-accent-2, #1A3333);
+  background: var(--background-accent-2);
+  color: var(--color-accent-2);
 }
 
 .palette-two .pagination .page:not(.current):hover,
 .palette-two .pagination .prev:not([data-enabled="false"]):hover,
 .palette-two .pagination .next:not([data-enabled="false"]):hover {
-  background: var(--background-accent-2-hover, #FFFFFFCC);
-  color: var(--color-accent-2, #1A3333);
+  background: var(--background-accent-2-hover);
+  color: var(--color-accent-2);
 }
 
 .palette-two .pagination path {
-  fill: var(--color-secondary-2, #CECECE);
+  fill: var(--color-secondary-2);
 }
 
 .palette-two .pagination .prev[data-enabled="true"] a:hover path,
 .palette-two .pagination .next[data-enabled="true"] a:hover path {
-  fill: var(--color-accent-2, #1A3333);
+  fill: var(--color-accent-2);
 }
