--- a/assets/product-card.css
+++ b/assets/product-card.css
@@ -47,9 +47,9 @@
 }
 
 .product-card__title {
-  font-family: var(--font-body, sans-serif);
+  font-family: var(--font-body);
   font-size: 18px;
-  line-height: var(--line-height-lg, 1.5);
+  line-height: var(--line-height-lg);
   margin: 0;
   flex-grow: 0;
 }
@@ -62,7 +62,7 @@
 
 .product-card__price-info {
   font-size: 16px;
-  font-weight: var(--font-weight-regular, 400);
+  font-weight: var(--font-weight-regular);
   padding-top: 10px;
   flex-grow: 1;
   display: flex;
@@ -78,7 +78,7 @@
 bq-product-price {
   font-size: 20px;
   line-height: 19px;
-  font-weight: var(--font-weight-semibold, 600);
+  font-weight: var(--font-weight-semibold);
 }
 
 .product-card__price-separator {
@@ -92,8 +92,8 @@ bq-product-price {
 
 bq-product-availability {
   font-size: 14px;
-  line-height: var(--line-height-xs, 1);
-  font-weight: var(--font-weight-medium, 500);
+  line-height: var(--line-height-xs);
+  font-weight: var(--font-weight-medium);
 }
 
 bq-product-availability[visible="true"] {
@@ -102,49 +102,49 @@ bq-product-availability[visible="true"] {
 }
 
 .palette-one .product-card {
-  color: var(--color-third, #1A333366);
-  background: var(--background-primary, #FFFFFF);
-  border: 1px solid var(--color-border, #1A333326);
+  color: var(--color-third-1);
+  background: var(--background-primary-1);
+  border: 1px solid var(--color-border-1);
 }
 
 .palette-one .product-card__vision {
-  border-bottom: 1px solid var(--color-border, #1A333326);
+  border-bottom: 1px solid var(--color-border-1);
 }
 
 .palette-one .product-card__vision.no-image {
-  background: var(--color-image-placeholder, #1A333326);
+  background: var(--color-image-placeholder-1);
 }
 
 .palette-one .product-card__price-info {
-  color: var(--color-primary, #1A3333);
+  color: var(--color-primary-1);
 }
 
 .palette-one .product-card__price,
 .palette-one bq-product-price {
-  color: var(--color-outline, #53C787);
+  color: var(--color-outline-1);
 }
 
 .palette-two .product-card {
-  color: var(--color-third-2, #FFFFFF66);
-  background: var(--background-primary-2, #1A3333);
-  border: 1px solid var(--color-border-2, #FFFFFF47);
+  color: var(--color-third-2);
+  background: var(--background-primary-2);
+  border: 1px solid var(--color-border-2);
 }
 
 .palette-two .product-card__vision {
-  border-bottom: 1px solid var(--color-border-2, #FFFFFF47);
+  border-bottom: 1px solid var(--color-border-2);
 }
 
 .palette-two .product-card__vision.no-image {
-  background: var(--color-image-placeholder-2, #FFFFFF47);
+  background: var(--color-image-placeholder-2);
 }
 
 .palette-two .product-card__price-info {
-  color: var(--color-primary-2, #FFFFFF);
+  color: var(--color-primary-2);
 }
 
 .palette-two .product-card__price,
 .palette-two bq-product-price {
-  color: var(--color-outline-2, #53C787);
+  color: var(--color-outline-2);
 }
 
 @media (min-width: 992px) {
