--- a/assets/sidebar.css
+++ b/assets/sidebar.css
@@ -5,13 +5,13 @@
   justify-content: space-between;
   align-items: center;
   padding: 16px;
-  font-weight: var(--font-weight-semibold, 600);
+  font-weight: var(--font-weight-semibold);
   border: 1px solid transparent;
 }
 
 .sidebar__nav-opener svg {
   transform: rotate(90deg);
-  transition: all var(--animation-duration, 200ms) var(--transition-function-ease-out);
+  transition: all var(--animation-duration) var(--transition-function-ease-out);
 }
 
 .sidebar__heading {
@@ -50,7 +50,7 @@
   transform: translate(-50%, -50%);
   width: 100%;
   height: 2px;
-  transition: all var(--animation-duration, 200ms) var(--transition-function-ease-out);
+  transition: all var(--animation-duration) var(--transition-function-ease-out);
 }
 
 .sidebar__menu-opener:after {
@@ -73,7 +73,7 @@
   pointer-events: none;
   max-height: 0;
   overflow-y: auto;
-  transition: max-height var(--animation-duration, 200ms) var(--transition-function-ease-out);
+  transition: max-height var(--animation-duration) var(--transition-function-ease-out);
 }
 
 .sidebar__menu-wrapper .sidebar__menu-list {
@@ -83,7 +83,7 @@
   padding: 10px 0 10px 10px;
   transform: translate(0, -100%);
   overflow: hidden;
-  transition: transform var(--animation-duration, 200ms) var(--transition-function-ease-out);
+  transition: transform var(--animation-duration) var(--transition-function-ease-out);
 }
 
 .sidebar__menu-wrapper .sidebar__menu-item {
@@ -96,7 +96,7 @@
   max-height: 0;
   margin: 32px 16px 0;
   overflow-y: auto;
-  transition: all var(--animation-duration, 200ms) var(--transition-function-ease-out);
+  transition: all var(--animation-duration) var(--transition-function-ease-out);
 }
 
 .sidebar__nav--sticky {
@@ -144,55 +144,55 @@
 }
 
 .palette-one .sidebar__nav-opener {
-  border-color: var(--color-border, #1A333326);
+  border-color: var(--color-border-1);
 }
 
 .palette-one .sidebar__nav-opener path {
-  fill: var(--color-outline, #53C787);
+  fill: var(--color-outline-1);
 }
 
 .palette-one .sidebar__menu a:hover {
-  color: var(--color-outline-hover, #53C787CC);
+  color: var(--color-outline-1-hover);
 }
 
 .palette-one .sidebar__menu {
-  border-color: var(--color-border, #1A333326);
+  border-color: var(--color-border-1);
 }
 
 .palette-one .sidebar__menu-opener:before,
 .palette-one .sidebar__menu-opener:after {
-  background: var(--color-outline, #53C787);
+  background: var(--color-outline-1);
 }
 
 .palette-one .sidebar__menu-opener:hover:before,
 .palette-one .sidebar__menu-opener:hover:after {
-  background: var(--color-outline-hover, #53C787CC);
+  background: var(--color-outline-1-hover);
 }
 
 .palette-two .sidebar__nav-opener {
-  border-color: var(--color-border-2, #FFFFFF47);
+  border-color: var(--color-border-2);
 }
 
 .palette-two .sidebar__nav-opener path {
-  fill: var(--color-outline-2, #53C787);
+  fill: var(--color-outline-2);
 }
 
 .palette-two .sidebar__menu a:hover {
-  color: var(--color-outline-2-hover, #53C787CC);
+  color: var(--color-outline-2-hover);
 }
 
 .palette-two .sidebar__menu {
-  border-color: var(--color-border-2, #FFFFFF47);
+  border-color: var(--color-border-2);
 }
 
 .palette-two .sidebar__menu-opener:before,
 .palette-two .sidebar__menu-opener:after {
-  background: var(--color-outline-2, #53C787);
+  background: var(--color-outline-2);
 }
 
 .palette-two .sidebar__menu-opener:hover:before,
 .palette-two .sidebar__menu-opener:hover:after {
-  background: var(--color-outline-2-hover, #53C787CC);
+  background: var(--color-outline-2-hover);
 }
 
 .loaded .sidebar__menu-wrapper {
