--- a/sections/images.liquid
+++ b/sections/images.liquid
@@ -27,9 +27,17 @@
 
   {%- if show_datepicker -%}
     {%- if color_palette == "one" -%}
-      {%- assign background_accent = settings.accent_background -%}
+      {%- if settings.accent_background != blank -%}
+        {%- assign background_accent = settings.accent_background -%}
+      {%- else -%}
+        {%- assign background_accent = branding_color -%}
+      {%- endif -%}
     {%- elsif color_palette == "two" -%}
-      {%- assign background_accent = settings.accent_background_2 -%}
+      {%- if settings.accent_background_2 != blank -%}
+        {%- assign background_accent = settings.accent_background_2 -%}
+      {%- else -%}
+        {%- assign background_accent = branding_color -%}
+      {%- endif -%}
     {%- endif -%}
   {%- endif -%}
 
@@ -292,11 +300,11 @@
                     <div class="images__text-area">
                       <div class="images__content">
                         {%- if tag != blank -%}
-                          <span class="images__tag tagline">{{- tag -}}</span>
+                          <strong class="images__tag tagline">{{- tag -}}</strong>
                         {%- endif -%}
 
                         {%- if title != blank -%}
-                          <h1 class="images__title">{{- title -}}</h1>
+                          <h1 class="images__title bq-content rx-content">{{- title -}}</h1>
                         {%- endif -%}
 
                         {%- if description != blank -%}
