--- a/sections/mosaic.liquid
+++ b/sections/mosaic.liquid
@@ -99,13 +99,13 @@
             <div class="mosaic__item-col">
               <div class="mosaic__text-area">
                 {%- if article_tag != blank -%}
-                  <span class="mosaic__tag tagline">{{- article_tag -}}</span>
+                  <strong class="mosaic__tag tagline">{{- article_tag -}}</strong>
                 {%- endif -%}
 
                 {%- if heading != blank -%}
-                  <h4 class="mosaic__heading">
+                  <h3 class="mosaic__heading h4">
                     {{- heading -}}
-                  </h4>
+                  </h3>
                 {%- endif -%}
 
                 {%- if text != blank -%}
