--- a/snippets/date-picker.liquid
+++ b/snippets/date-picker.liquid
@@ -1,59 +1,58 @@
 {%- style -%}
   bq-date-picker {
-    --date-picker-border-radius: var(--border-radius, 0);
+    --date-picker-border-radius: var(--border-radius);
     --date-picker-cleanstate-padding: 11px 22px;
     --date-picker-section-padding: 12px;
     --date-picker-title-size: 16px;
     --date-picker-text-size: 16px;
-    --date-picker-title-line-height: 1.5;
-    --date-picker-text-line-height: 1.5;
+    --date-picker-title-line-height: var(--line-height-lg);
+    --date-picker-text-line-height: var(--line-height-lg);
 
     {%- if color_palette == "one" -%}
-      {%- if settings.background != blank -%}
-        --date-picker-background-color: var(--background-primary, #FFFFFF);
+      {%- if settings.background_1 != blank -%}
+        --date-picker-background-color: var(--background-primary-1);
       {%- endif -%}
 
-      {%- if settings.primary_color != blank -%}
-        --date-picker-text-color: var(--color-primary, #1A3333);
-        --date-picker-placeholder-color: var(--color-placeholder, #1A333359);
-        --date-picker-section-border: 1px solid var(--color-border, #1A333326);
+      {%- if settings.primary_color_1 != blank -%}
+        --date-picker-text-color: var(--color-primary-1);
+        --date-picker-placeholder-color: var(--color-placeholder-1);
+        --date-picker-section-border: 1px solid var(--color-border-1);
       {%- endif -%}
 
-      {%- if settings.accent_background != blank -%}
-        --date-picker-cleanstate-background-color: var(--background-accent, #1A3333);
-        --date-picker-box-shadow: 0 0 0 1px var(--background-accent, #1A3333);
+      {%- if settings.accent_background_1 != blank -%}
+        --date-picker-cleanstate-background-color: var(--background-accent-1);
+        --date-picker-box-shadow: 0 0 0 1px var(--background-accent-1);
       {%- endif -%}
 
-      {%- if settings.accent_color != blank -%}
-        --date-picker-icon-color: var(--color-accent, #FFFFFF);
-        --date-picker-cleanstate-text-color: var(--color-accent, #FFFFFF);
-        --color-accent-foreground: var(--color-accent, #FFFFFF);
+      {%- if settings.accent_color_1 != blank -%}
+        --date-picker-icon-color: var(--color-accent-1);
+        --date-picker-cleanstate-text-color: var(--color-accent-1);
+        --color-accent-foreground: var(--color-accent-1);
       {%- endif -%}
 
     {%- elsif color_palette == "two" -%}
       {%- if settings.background_2 != blank -%}
-        --date-picker-background-color: var(--background-primary-2, #1A3333);
+        --date-picker-background-color: var(--background-primary-2);
       {%- endif -%}
 
       {%- if settings.primary_color_2 != blank -%}
-        --date-picker-text-color: var(--color-primary-2, #FFFFFF);
-        --date-picker-placeholder-color: var(--color-placeholder-2, #FFFFFF59);
-        --date-picker-section-border: 1px solid var(--color-border-2, #FFFFFF47);
+        --date-picker-text-color: var(--color-primary-2);
+        --date-picker-placeholder-color: var(--color-placeholder-2);
+        --date-picker-section-border: 1px solid var(--color-border-2);
       {%- endif -%}
 
       {%- if settings.accent_background_2 != blank -%}
-        --date-picker-cleanstate-background-color: var(--background-accent-2, #FFFFFF);
-        --date-picker-box-shadow: 0 0 0 1px var(--background-accent-2, #FFFFFF);
+        --date-picker-cleanstate-background-color: var(--background-accent-2);
+        --date-picker-box-shadow: 0 0 0 1px var(--background-accent-2);
       {%- endif -%}
 
       {%- if settings.accent_color_2 != blank -%}
-        --date-picker-icon-color: var(--color-accent-2, #1A3333);
-        --date-picker-cleanstate-text-color: var(--color-accent-2, #1A3333);
-        --color-accent-foreground: var(--color-accent-2, #1A3333);
+        --date-picker-icon-color: var(--color-accent-2);
+        --date-picker-cleanstate-text-color: var(--color-accent-2);
+        --color-accent-foreground: var(--color-accent-2);
       {%- endif -%}
     {%- endif -%}
   }
 {%- endstyle -%}
 
-<bq-date-picker></bq-date-picker>
-<bq-date-picker-modal branding-color="{{- background_accent -}}"></bq-date-picker-modal>
+<bq-date-picker branding-color="{{- background_accent -}}"></bq-date-picker>
