--- a/snippets/variables-cart-lines.liquid
+++ b/snippets/variables-cart-lines.liquid
@@ -1,8 +1,8 @@
 {% style %}
   bq-cart-lines {
-    --line-image-size: var(--thumbnail-size, 80px);
-    --line-image-border-radius: var(--border-radius, 0);
-    --line-control-border-radius: var(--border-radius, 0);
+    --line-image-size: var(--thumbnail-size);
+    --line-image-border-radius: var(--border-radius-none);
+    --line-control-border-radius: var(--border-radius-none);
     --line-availability-border: 1px solid;
     --line-title-font-size: 16px;
     --line-variations-font-size: 14px;
@@ -10,62 +10,62 @@
     --line-toggle-font-size: 16px;
     --line-bundle-item-quantity-font-size: 16px;
     --line-bundle-item-name-font-size: 16px;
-    --line-availability-border-color-available: var(--color-green, #51C234);
-    --line-availability-background-color-available: var(--color-green, #51C234);
-    --line-availability-color-available: var(--color-white, #FFFFFF);
-    --line-availability-border-color-unavailable: var(--color-red, #C23434);
-    --line-availability-background-color-unavailable: var(--color-red, #C23434);
-    --line-availability-color-unavailable: var(--color-white, #FFFFFF);
+    --line-availability-border-color-available: var(--color-green);
+    --line-availability-background-color-available: var(--color-green);
+    --line-availability-color-available: var(--color-white);
+    --line-availability-border-color-unavailable: var(--color-red);
+    --line-availability-background-color-unavailable: var(--color-red);
+    --line-availability-color-unavailable: var(--color-white);
 
-    {% if color_palette == "one" %}
-      {% if settings.primary_color != blank %}
-        --line-title-color: var(--color-primary, #1A3333);
-        --line-price-color: var(--color-primary, #1A3333);
-        --line-input-color: var(--color-primary, #1A3333);
-        --line-bundle-item-quantity-color: var(--color-primary, #1A3333);
-        --line-bundle-item-name-color: var(--color-primary, #1A3333);
-        --line-border: 1px solid var(--color-border, #1A333326);
-        --line-image-border: 1px solid var(--color-border, #1A333326);
-        --line-control-border: 1px solid var(--color-border, #1A333326);
-        --line-variations-color: var(--color-third, #1A333366);
-      {% endif %}
+    {%- if color_palette == "one" -%}
+      {%- if settings.primary_color_1 != blank -%}
+        --line-title-color: var(--color-primary-1);
+        --line-price-color: var(--color-primary-1);
+        --line-input-color: var(--color-primary-1);
+        --line-bundle-item-quantity-color: var(--color-primary-1);
+        --line-bundle-item-name-color: var(--color-primary-1);
+        --line-border: 1px solid var(--color-border-1);
+        --line-image-border: 1px solid var(--color-border-1);
+        --line-control-border: 1px solid var(--color-border-1);
+        --line-variations-color: var(--color-third-1);
+      {%- endif -%}
 
-      {% if settings.background != blank %}
-        --line-bundle-item-quantity-background: var(--background-primary, #FFFFFF);
-      {% endif %}
+      {%- if settings.background_1 != blank -%}
+        --line-bundle-item-quantity-background: var(--background-primary-1);
+      {%- endif -%}
 
-      {% if settings.accent_background != blank %}
-        --line-toggle-color: var(--background-accent, #1A3333);
-      {% endif %}
+      {%- if settings.accent_background_1 != blank -%}
+        --line-toggle-color: var(--background-accent-1);
+      {%- endif -%}
 
-      {% if settings.accent_outline != blank %}
-        --line-icon-color: var(--color-outline, #53C787);
-      {% endif %}
+      {%- if settings.accent_outline_1 != blank -%}
+        --line-icon-color: var(--color-outline-1);
+      {%- endif -%}
 
     {% elsif color_palette == "two" %}
-      {% if settings.primary_color_2 != blank %}
-        --line-title-color: var(--color-primary-2, #FFFFFF);
-        --line-price-color: var(--color-primary-2, #FFFFFF);
-        --line-input-color: var(--color-primary-2, #FFFFFF);
-        --line-bundle-item-quantity-color: var(--color-primary-2, #FFFFFF);
-        --line-bundle-item-name-color: var(--color-primary-2, #FFFFFF);
-        --line-border: 1px solid var(--color-border-2, #FFFFFF47);
-        --line-image-border: 1px solid var(--color-border-2, #FFFFFF47);
-        --line-control-border: 1px solid var(--color-border-2, #FFFFFF47);
-        --line-variations-color: var(--color-third-2, #FFFFFF66);
-      {% endif %}
+      {%- if settings.primary_color_2 != blank -%}
+        --line-title-color: var(--color-primary-2);
+        --line-price-color: var(--color-primary-2);
+        --line-input-color: var(--color-primary-2);
+        --line-bundle-item-quantity-color: var(--color-primary-2);
+        --line-bundle-item-name-color: var(--color-primary-2);
+        --line-border: 1px solid var(--color-border-2);
+        --line-image-border: 1px solid var(--color-border-2);
+        --line-control-border: 1px solid var(--color-border-2);
+        --line-variations-color: var(--color-third-2);
+      {%- endif -%}
 
-      {% if settings.background_2 != blank %}
-        --line-bundle-item-quantity-background: var(--background-primary-2, #1A3333);
-      {% endif %}
+      {%- if settings.background_2 != blank -%}
+        --line-bundle-item-quantity-background: var(--background-primary-2);
+      {%- endif -%}
 
-      {% if settings.accent_background_2 != blank %}
-        --line-toggle-color: var(--background-accent-2, #FFFFFF);
-      {% endif %}
+      {%- if settings.accent_background_2 != blank -%}
+        --line-toggle-color: var(--background-accent-2);
+      {%- endif -%}
 
-      {% if settings.accent_outline_2 != blank %}
-        --line-icon-color: var(--color-outline-2, #53C787);
-      {% endif %}
-    {% endif %}
+      {%- if settings.accent_outline_2 != blank -%}
+        --line-icon-color: var(--color-outline-2);
+      {%- endif -%}
+    {%- endif -%}
   }
 {% endstyle %}
