--- a/snippets/variables-cart-services.liquid
+++ b/snippets/variables-cart-services.liquid
@@ -1,49 +1,49 @@
 {% style %}
   bq-cart-services {
-    line-height: var(--line-height-sm, 1.2);
-    --services-container-background: var(--color-azureish-white, #D7E2FF);
-    --services-text-color: var(--color-black, #1A3333);
+    line-height: var(--line-height-sm);
+    --services-container-background: var(--color-azureish-white);
+    --services-text-color: var(--color-black);
     --services-container-padding: 16px;
-    --services-container-border-radius: var(--border-radius, 0);
+    --services-container-border-radius: var(--border-radius-none);
     --service-title-font-size: 18px;
     --service-name-font-size: 16px;
     --service-price-font-size: 16px;
-    --service-checkbox-border-radius: var(--border-radius, 0);
+    --service-checkbox-border-radius: var(--border-radius-none);
     --service-checkbox-size: 20px;
 
-    {% if color_palette == "one" %}
-      {% if settings.primary_color != blank %}
-        --service-checkbox-border: 1px solid var(--color-border, #1A333326);
-      {% endif %}
+    {%- if color_palette == "one" -%}
+      {%- if settings.primary_color_1 != blank -%}
+        --service-checkbox-border: 1px solid var(--color-border-1);
+      {%- endif -%}
 
-      {% if settings.background != blank %}
-        --service-checkbox-color: var(--background-primary, #FFFFFF);
-      {% endif %}
+      {%- if settings.background_1 != blank -%}
+        --service-checkbox-color: var(--background-primary-1);
+      {%- endif -%}
 
-      {% if settings.accent_background != blank %}
-        --service-checkbox-color-checked: var(--background-accent, #1A3333);
-      {% endif %}
+      {%- if settings.accent_background_1 != blank -%}
+        --service-checkbox-color-checked: var(--background-accent-1);
+      {%- endif -%}
 
-      {% if settings.accent_color != blank %}
-        --service-checkbox-icon-color: var(--color-accent, #FFFFFF);
-      {% endif %}
+      {%- if settings.accent_color_1 != blank -%}
+        --service-checkbox-icon-color: var(--color-accent-1);
+      {%- endif -%}
 
     {% elsif color_palette == "two" %}
-      {% if settings.primary_color_2 != blank %}
-        --service-checkbox-border: 1px solid var(--color-border-2, #FFFFFF47);
-      {% endif %}
+      {%- if settings.primary_color_2 != blank -%}
+        --service-checkbox-border: 1px solid var(--color-border-2);
+      {%- endif -%}
 
-      {% if settings.background_2 != blank %}
-        --service-checkbox-color: var(--background-primary-2, #1A3333);
-      {% endif %}
+      {%- if settings.background_2 != blank -%}
+        --service-checkbox-color: var(--background-primary-2);
+      {%- endif -%}
 
-      {% if settings.accent_background_2 != blank %}
-        --service-checkbox-color-checked: var(--background-accent-2, #FFFFFF);
-      {% endif %}
+      {%- if settings.accent_background_2 != blank -%}
+        --service-checkbox-color-checked: var(--background-accent-2);
+      {%- endif -%}
 
-      {% if settings.accent_color_2 != blank %}
-        --service-checkbox-icon-color: var(--color-accent-2, #1A3333);
-      {% endif %}
-    {% endif %}
+      {%- if settings.accent_color_2 != blank -%}
+        --service-checkbox-icon-color: var(--color-accent-2);
+      {%- endif -%}
+    {%- endif -%}
   }
 {% endstyle %}
