--- a/snippets/variables-mini-cart.liquid
+++ b/snippets/variables-mini-cart.liquid
@@ -2,45 +2,45 @@
   bq-minicart-button {
     --minicart-button-size: 22px;
     --minicart-button-badge-size: 12px;
-    --minicart-button-border-radius: 50%;
+    --minicart-button-border-radius: var(--border-radius-circle);
     --minicart-button-font-size: 14px;
     --minicart-button-padding: 4px;
     --minicart-button-hover-opacity: 1;
-    --minicart-button-transition-duration: var(--animation-duration, 200ms);
+    --minicart-button-transition-duration: var(--animation-duration);
     --minicart-button-font: var(--font-body, --minicart-font, sans-serif);
 
     {%- if color_palette == "one" -%}
-      {%- if settings.primary_color != blank -%}
-        --minicart-button-color: var(--color-primary, #1A3333);
+      {%- if settings.primary_color_1 != blank -%}
+        --minicart-button-color: var(--color-primary-1);
       {%- endif -%}
 
-      {%- if settings.accent_background != blank -%}
-        --minicart-button-accent-color: var(--background-accent, #1A3333);
+      {%- if settings.accent_background_1 != blank -%}
+        --minicart-button-accent-color: var(--background-accent-1);
       {%- endif -%}
 
-      {% if settings.accent_color != blank %}
-        --minicart-button-badge-color: var(--color-accent, #FFFFFF);
+      {% if settings.accent_color_1 != blank %}
+        --minicart-button-badge-color: var(--color-accent-1);
       {% endif %}
 
-      {%- if settings.accent_outline != blank -%}
-        --minicart-button-hover-color: var(--color-outline-hover, #53C787CC);
+      {%- if settings.accent_outline_1 != blank -%}
+        --minicart-button-hover-color: var(--color-outline-1-hover);
       {%- endif -%}
 
     {%- elsif color_palette == "two" -%}
       {%- if settings.primary_color_2 != blank -%}
-        --minicart-button-color: var(--color-primary-2, #FFFFFF);
+        --minicart-button-color: var(--color-primary-2);
       {%- endif -%}
 
       {%- if settings.accent_background_2 != blank -%}
-        --minicart-button-accent-color: var(--background-accent-2, #FFFFFF);
+        --minicart-button-accent-color: var(--background-accent-2);
       {%- endif -%}
 
       {% if settings.accent_color_2 != blank %}
-        --minicart-button-badge-color: var(--color-accent-2, #1A3333);
+        --minicart-button-badge-color: var(--color-accent-2);
       {% endif %}
 
       {%- if settings.accent_outline_2 != blank -%}
-        --minicart-button-hover-color: var(--color-outline-2-hover, #53C787CC);
+        --minicart-button-hover-color: var(--color-outline-2-hover);
       {%- endif -%}
     {%- endif -%}
   }
