--- a/snippets/variables-product-gallery.liquid
+++ b/snippets/variables-product-gallery.liquid
@@ -2,45 +2,45 @@
   bq-product-gallery {
     --product-gallery-control-size: 40px;
     --product-gallery-control-padding: 0 5px;
-    --product-gallery-control-border-radius: var(--border-radius, 0);
+    --product-gallery-control-border-radius: var(--border-radius);
     --product-gallery-control-icon-size: 16px;
     --product-gallery-control-filter: blur(2px);
     --product-gallery-direction: column;
     --product-gallery-gap: 16px;
     --product-gallery-preview-gap: 16px;
-    --product-gallery-preview-border-radius: var(--border-radius, 0);
+    --product-gallery-preview-border-radius: var(--border-radius);
     --product-gallery-thumbnail-direction: row;
-    --product-gallery-thumbnail-border-radius: var(--border-radius, 0);
-    --product-gallery-thumbnail-size: var(--thumbnail-size, 80px);
+    --product-gallery-thumbnail-border-radius: var(--border-radius);
+    --product-gallery-thumbnail-size: var(--thumbnail-size);
 
     {%- if color_palette == "one" -%}
-      {%- if settings.primary_color != blank -%}
-        --product-gallery-preview-border: 1px solid var(--color-border, #1A333326);
-        --product-gallery-thumbnail-border: 1px solid var(--color-border, #1A333326);
+      {%- if settings.primary_color_1 != blank -%}
+        --product-gallery-preview-border: 1px solid var(--color-border-1);
+        --product-gallery-thumbnail-border: 1px solid var(--color-border-1);
       {%- endif -%}
 
-      {%- if settings.accent_background != blank -%}
-        --product-gallery-control-background-color: var(--background-accent, #1A3333);
-        --product-gallery-active-thumbnail-border: 1px solid var(--background-accent, #1A3333);
+      {%- if settings.accent_background_1 != blank -%}
+        --product-gallery-control-background-color: var(--background-accent-1);
+        --product-gallery-active-thumbnail-border: 1px solid var(--background-accent-1);
       {%- endif -%}
 
-      {%- if settings.accent_color != blank -%}
-        --product-gallery-control-icon-color: var(--color-accent, #FFFFFF);
+      {%- if settings.accent_color_1 != blank -%}
+        --product-gallery-control-icon-color: var(--color-accent-1);
       {%- endif -%}
 
     {%- elsif color_palette == "two" -%}
       {%- if settings.primary_color_2 != blank -%}
-        --product-gallery-preview-border: 1px solid var(--color-border-2, #FFFFFF47);
-        --product-gallery-thumbnail-border: 1px solid var(--color-border-2, #FFFFFF47);
+        --product-gallery-preview-border: 1px solid var(--color-border-2);
+        --product-gallery-thumbnail-border: 1px solid var(--color-border-2);
       {%- endif -%}
 
       {%- if settings.accent_background_2 != blank -%}
-        --product-gallery-control-background-color: var(--background-accent-2, #FFFFFF);
-        --product-gallery-active-thumbnail-border: 1px solid var(--background-accent-2, #FFFFFF);
+        --product-gallery-control-background-color: var(--background-accent-2);
+        --product-gallery-active-thumbnail-border: 1px solid var(--background-accent-2);
       {%- endif -%}
 
       {%- if settings.accent_color_2 != blank -%}
-        --product-gallery-control-icon-color: var(--color-accent-2, #1A3333);
+        --product-gallery-control-icon-color: var(--color-accent-2);
       {%- endif -%}
     {%- endif -%}
   }
